@@ -18,6 +18,8 @@ Version 1.3.19+svn:
    * cleanups and a compiler fix based on patch #911
    * the detection of the savegame version was done after parsing the savegame
      this could lead to crashes when loading 1.2 savegames (debian bug 467088)
+   * fix a bug where the random map generator could place a keep on the border
+     (bug #11150)
 
 Version 1.3.19:
  * map editor:
